(executable
 (name text_extract)
 (modules text_extract)
 (libraries cmdliner fmt re))

(executable
 (name text_extract_executed)
 (modules text_extract_executed)
 (libraries cmdliner re fmt ))

(executable
 (name io_ops)
 (modules io_ops)
 (libraries logs logs.fmt lwt lwt.unix index.unix ))

(executable
 (name freeze_extract)
 (modules freeze_extract)
 (libraries cmdliner fmt re unix common))

(library
 (name common)
 (modules common)
 (libraries cmdliner re fmt ))

(executable
 (name compare_traces)
 (modules compare_traces)
 (libraries memtrace mtime cmdliner))

(executable
 (name extract_time_window)
 (modules extract_time_window)
 (libraries cmdliner re))

(executable
 (name extract_inodes)
 (modules extract_inodes)
 (libraries cmdliner re))

(executable
 (name extract_contents)
 (modules extract_contents)
 (libraries cmdliner fmt re))


(executable
 (name extract_index)
 (modules extract_index)
 (libraries cmdliner fmt re))
